--- a/public/admin/createSession/index.html
+++ b/public/admin/createSession/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="/css/default.css" />
         <link rel="stylesheet" href="css/style.css" />
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="js/index.js" defer></script>
