--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 >
                     Pizza
                 </h1>
-                <div class="w-[20vmin] flex justify-end">
+                <div class="w-[20vmin] flex justify-end" id="settingsButton">
                     <svg
                         xmlns="http://www.w3.org/2000/svg"
                         fill="none"
